--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,7 @@
 }
 
 body {
-  font-family: 16px "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-family:'Helvetica Neue', Arial, sans-serif;
   color: #121214;
 }
